REGRESSION: ASSERT(!typeInfo().hasImpureGetOwnPropertySlot() || typeInfo().newImpurePropertyFiresWatchpoints()) on jquery tests https://bugs.webkit.org/show_bug.cgi?id=131798

Reviewed by Alexey Proskuryakov.

Some day, we will fix https://bugs.webkit.org/show_bug.cgi?id=131810 and some version
of this assertion can return. For now, it's not clear that the assertion is guarding
any truly undesirable behavior - so it should just go away and be replaced with a
FIXME.

* bytecode/GetByIdStatus.cpp:
(JSC::GetByIdStatus::computeForStubInfo):
* runtime/Structure.h:
(JSC::Structure::takesSlowPathInDFGForImpureProperty):



Canonical link: https://commits.webkit.org/149882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167452 268f45cc-cd09-0410-ab3c-d52691b4dbfc